--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -99,28 +99,6 @@
 
     <!-- Page Content -->
 
-    <a  name="LEDCUBE"></a>
-	<div class="content-section-b">
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <a href="pages/LED_CUBE/led_cube.html"> <h2 class="section-heading">LED Animation Cube</h2> </a>
-                    <p class="lead">Built an open source design for a 3D LED animation cube.</p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="pages//LED_CUBE/images/PXL_20220619_112533734.jpg" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-	</div>
-
-
 
     <a  name="PCR Machine"></a>
 	<div class="content-section-a">
@@ -143,7 +121,7 @@
 
 	</div>
 
-    
+
     <a  name="surgerybot"></a>
 	<div class="content-section-b">
         <div class="container">
@@ -153,7 +131,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/CAT_ROBOT/cat_robot.html"> <h2 class="section-heading">Mouse Surgery Robot</h2> </a>
-                    <p class="lead">Designed and built a robot for automating craniotomies in research mice.</p>
+                    <p class="lead">Designed and built a robot for automating craniotomies on research mice.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="pages/CAT_ROBOT/images/285183684_581245230191818_738763148605609657_n.jpg" alt="">
@@ -176,7 +154,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="pages/proj7/lightsheet.html"> <h2 class="section-heading"> Lightsheet Microscope</h2> </a>
-                    <p class="lead">Designed and built a complete lightsheet microscope system.</p>
+                    <p class="lead">Designed and built a lightsheet microscope system.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                         <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
@@ -221,7 +199,7 @@
                   <hr class="section-heading-spacer">
                   <div class="clearfix"></div>
                  <a href="https://github.com/JulianPitney/3D-Kinematics"> <h2 class="section-heading">3D Kinematics Box</h2> </a>
-                  <p class="lead">Designed and built a markerless, 360° coverage, hardware synchronized and fully automated 3D pose estimation system.</p>
+                  <p class="lead">Designed and built a markerless, 360°, hardware synchronized 3D pose estimation system.</p>
               </div>
               <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                       <img class="img-responsive" src="img/kinbox.jpg" alt="">
@@ -242,7 +220,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="https://github.com/JulianPitney/HomeCageSinglePellet"> <h2 class="section-heading"> Automated Single Pellet</h2> </a>
-                    <p class="lead">Designed and built a system that hosts up to 5 mice in their home environment and automatically administers the single pellet reaching test while collecting useful data.</p>
+                    <p class="lead">Designed and built a system that hosts up to 5 mice in their home environment and automatically administers the single pellet reaching task. The system collects a variety of data including RFID, raw video and the results of computer vision analyses.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/reach.gif" alt="">
@@ -318,30 +296,26 @@
     </div>
 
 
-
-    <!-- /.content-section-a -->
-
-    <div class="content-section-b">
-
+    <a  name="LEDCUBE"></a>
+  <div class="content-section-b">
         <div class="container">
 
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/proj2/project_page.html"> <h2 class="section-heading"> Polymorphism:<br>Sorting Algorithms With C++ Templates</h2> </a>
-                    <p class="lead">Quick sort, merge sort, insertion sort and bubble sort using C++ generics.</p>
+                    <a href="pages/LED_CUBE/led_cube.html"> <h2 class="section-heading">LED Animation Cube</h2> </a>
+                    <p class="lead">Built an LED animation cube using an open source design.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/polymorphism.jpg" alt="">
+                    <img class="img-responsive" src="pages//LED_CUBE/images/PXL_20220619_112533734.jpg" alt="">
                 </div>
             </div>
 
         </div>
         <!-- /.container -->
 
-    </div>
-    <!-- /.content-section-b -->
+    <!-- /.content-section-a -->
 
     <div class="content-section-a">
 
@@ -385,6 +359,8 @@
         <!-- /.container -->
 
     </div>
+
+  </div>
 
 	<a  name="contact"></a>
     <div class="banner">
