Disabled link to lamp device page

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -108,7 +108,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/LAMP/lamp.html"> <h2 class="section-heading"> PCR Machine</h2> </a>
+                   <h2 class="section-heading"> PCR Machine (coming soon)</h2> </a>
                     <p class="lead">Designed and built a thermal cycler with integrated fluorimeter for automated LAMP/PCR.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
