--- a/htdocs/pages/LAMP/lamp.html
+++ b/htdocs/pages/LAMP/lamp.html
@@ -81,7 +81,7 @@
 				<p>This project </p>
 				
 				<div class="col-lg-7">
-				 <img class="img-responsive" src="images/board_.png" alt="">
+				 <img class="img-responsive" src="board_nologo.jpg" alt="">
 				 </div>
 
 				
