--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -112,7 +112,7 @@
                     <p class="lead">Designed and built a thermal cycler with integrated fluorimeter for automated LAMP/PCR.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive" src="pages/LAMP/images/board_.png" alt="">
+                        <img class="img-responsive" src="pages/LAMP/images/board_nologo.jpg" alt="">
                 </div>
             </div>
 
