Rewrote project titles

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <h2 class="section-heading"> PCR Machine (coming soon)</h2> </a>
-                    <p class="lead">Designed and built a thermal cycler with integrated fluorimeter for automated LAMP/PCR.</p>
+                    <a href="pages/LAMP/lamp.html"> <h2 class="section-heading"> PCR Machine (coming soon)</h2> </a>
+                    <p class="lead">Designed and built a PCR machine.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                         <img class="img-responsive" src="pages/LAMP/images/board_nologo.jpg" alt="">
@@ -241,7 +241,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="pages/SURVEILLANCE_PROJ/surveillance_proj.html"> <h2 class="section-heading"> Automated Video Surveillance: <br>OpenCV + Raspberry Pi </h2> </a>
-                    <p class="lead">A remotely accessible surveillance system that uses image recognition to identify objects and automatically alert users.</p>
+                    <p class="lead">Designed and built a surveillance camera using OpenCV and an RPi.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/finish_camera.jpg" alt="">
@@ -261,7 +261,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="pages/NEURAL_NET/neural_net.html"> <h2 class="section-heading"> Neural Network: <br>Gradient Descent for Supervised Machine Learning</h2> </a>
-                    <p class="lead">Generates, trains and benchmarks neural networks of arbitrary size using a polymorphic interface for working with a variety of input data formats.</p>
+                    <p class="lead">Implemented a neural network from scratch using only the C++ standard library. I was able to train my network on the MNIST dataset and score 98% digit classification accuracy.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/neuralnet.png" alt="">
@@ -282,8 +282,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="pages/MEDIA_PLAYER/mediaplayer.html"> <h2 class="section-heading">Android Media Player</h2> </a>
-                    <p class="lead">Automatically detects, organizes and fills in missing info/art for local music using Last.fm API. A lot of care was put into the GUI to ensure ease of use,
-						good aesthetics and smootheness even with very large music libraries.</p>
+                    <p class="lead">Designed and implemented a media player app for Android. The app reads music from a local folder on your phone and then hits the LastFM API to fill in missing details like album covers. </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/mediaplayer.png" alt="">
@@ -326,7 +325,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/AVL_TREE/avl_tree.html"> <h2 class="section-heading">High Performance Search:<br>AVL Tree</h2> </a>
-                    <p class="lead">A C++ implementation of the AVL Tree.</p>
+                    <p class="lead">Implemented an AVL tree in C++.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/phones.png" alt="">
@@ -348,7 +347,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                    <a href="pages/PLEX_SERVER/media_server.html"> <h2 class="section-heading"> Home Media Server:<br> Plex + Fedora</h2> </a>
-                    <p class="lead">A linux hosted media server for high bandwidth streaming.</p>
+                    <p class="lead">Configured a Linux hosted Plex server to transcode and stream 4k video over my LAN.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/media-server.png" alt="">
