Adding more project pages

--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/LAMP/lamp.html"> <h2 class="section-heading"> PCR Machine (coming soon)</h2> </a>
+                    <a href="pages/PCR/pcr.html"> <h2 class="section-heading"> PCR Machine (coming soon)</h2> </a>
                     <p class="lead">Designed and built a PCR machine.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive" src="pages/LAMP/images/board_nologo.jpg" alt="">
+                        <img class="img-responsive" src="pages/PCR/images/board_nologo.jpg" alt="">
                 </div>
             </div>
 
@@ -120,6 +120,28 @@
         <!-- /.container -->
 
 	</div>
+
+    <a  name="Seahorse"></a>
+	<div class="content-section-a">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <a href="pages/SEAHORSE_PLATFORM/seahorse.html"> <h2 class="section-heading">Research Data Management Platform</h2> </a>
+                    <p class="lead">Hired and led a team to design and build a patient data management system for multiple clinical trials centers.</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                        <img class="img-responsive" src="pages/SEAHORSE_PLATFORM/images/homepage.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+	</div>
+
 
 
     <a  name="surgerybot"></a>
@@ -255,7 +277,6 @@
 	<a  name="neuralnetwork"></a>
 	<div class="content-section-b">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
@@ -272,6 +293,31 @@
         <!-- /.container -->
 
 	</div>
+
+
+
+    <a  name="Research Publications"></a>
+	<div class="content-section-b">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <a href="pages/PUBLICATIONS/publications.html"> <h2 class="section-heading">Research Publications</h2> </a>
+                    <p class="lead">A list of research publications for which I am one of the listed authors.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                        <img class="img-responsive" src="pages/PUBLICATIONS/images/research_logo_dalle3.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+	</div>
+
+
+
 
 	<a  name="androidmediaplayer"></a>
     <div class="content-section-a">
@@ -295,26 +341,25 @@
     </div>
 
 
-    <a  name="LEDCUBE"></a>
-  <div class="content-section-b">
+    <a  name="LED Animation Cube"></a>
+	<div class="content-section-b">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/LED_CUBE/led_cube.html"> <h2 class="section-heading">LED Animation Cube</h2> </a>
+                    <a href="pages/PUBLICATIONS/publications.html"> <h2 class="section-heading">LED Animation Cube</h2> </a>
                     <p class="lead">Built an LED animation cube using an open source design.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="pages//LED_CUBE/images/PXL_20220619_112533734.jpg" alt="">
+                        <img class="img-responsive" src="pages/LED_CUBE/images/PXL_20220619_112533734.jpg" alt="">
                 </div>
             </div>
 
         </div>
         <!-- /.container -->
 
-    <!-- /.content-section-a -->
+	</div>
 
     <div class="content-section-a">
 
@@ -333,24 +378,22 @@
             </div>
 
         </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.content-section-a -->
 
-	    <div class="content-section-b">
+
+	<a  name="table"></a>
+    <div class="content-section-a">
 
         <div class="container">
-
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/PLEX_SERVER/media_server.html"> <h2 class="section-heading"> Home Media Server:<br> Plex + Fedora</h2> </a>
-                    <p class="lead">Configured a Linux hosted Plex server to transcode and stream 4k video over my LAN.</p>
+                   <a href="pages/TABLE/table.html"> <h2 class="section-heading">Workbench</h2> </a>
+                    <p class="lead">Built a workbench for fun.</p>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/media-server.png" alt="">
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="pages/TABLE/images/TABLE.jpg" alt="">
                 </div>
             </div>
 
@@ -358,6 +401,28 @@
         <!-- /.container -->
 
     </div>
+
+
+    <a  name="Misc"></a>
+	<div class="content-section-b">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <a href="pages/MISC/misc.html   "> <h2 class="section-heading">Miscellaneous pictures from my life :)</h2> </a>
+                    <p class="lead">UwU</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                        <img class="img-responsive" src="pages/MISC/images/monty/monty_and_me.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+	</div>
+
+
+
 
   </div>
 
