--- a/index.html
+++ b/index.html
@@ -101,30 +101,26 @@
 
 
     <a  name="PCR Machine"></a>
-	<div class="content-section-a">
+	<div class="content-section-b">
         <div class="container">
-
             <div class="row">
-                <div class="col-lg-5 col-sm-6">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/PCR/pcr.html"> <h2 class="section-heading"> PCR Machine (coming soon)</h2> </a>
+                    <a href="pages/PCR/pcr.html"> <h2 class="section-heading">PCR Machine</h2> </a>
                     <p class="lead">Designed and built a PCR machine.</p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive" src="pages/PCR/images/board_nologo.jpg" alt="">
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="pages/PCR/images/277829728_702448261084068_6938366353211433746_n.jp" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
 	</div>
+
 
     <a  name="Seahorse"></a>
 	<div class="content-section-a">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
@@ -136,10 +132,7 @@
                         <img class="img-responsive" src="pages/SEAHORSE_PLATFORM/images/homepage.png" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
 	</div>
 
 
@@ -147,7 +140,6 @@
     <a  name="surgerybot"></a>
 	<div class="content-section-b">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
@@ -159,10 +151,7 @@
                     <img class="img-responsive" src="pages/CAT_ROBOT/images/285183684_581245230191818_738763148605609657_n.jpg" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
 	</div>
 
 
@@ -170,7 +159,6 @@
     <a  name="lightsheet"></a>
 	<div class="content-section-a">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
@@ -182,10 +170,7 @@
                         <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
 	</div>
 
 
@@ -193,45 +178,37 @@
     <a  name="hackhealth"></a>
 	<div class="content-section-b">
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/HACKHEALTH/hackhealth.html"> <h2 class="section-heading">Hacking Health</h2> </a>
-                    <p class="lead">Organized and lead a team to win the Ottawa Hacking Health event at Shopify.</p>
+                    <p class="lead">Organized and led a team to win the Ottawa Hacking Health event at Shopify.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/hackhealth.jpg" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
 	</div>
 
 
-  <a  name="3D Kinematics"></a>
-<div class="content-section-a">
-      <div class="container">
-
-          <div class="row">
-              <div class="col-lg-5 col-sm-6">
-                  <hr class="section-heading-spacer">
-                  <div class="clearfix"></div>
-                 <a href="https://github.com/JulianPitney/3D-Kinematics"> <h2 class="section-heading">3D Kinematics Box</h2> </a>
-                  <p class="lead">Designed and built a markerless, 360°, hardware synchronized 3D pose estimation system.</p>
-              </div>
-              <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                      <img class="img-responsive" src="img/kinbox.jpg" alt="">
-              </div>
-          </div>
-
-      </div>
-      <!-- /.container -->
-
-</div>
+    <a  name="3D Kinematics"></a>
+    <div class="content-section-a">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <a href="https://github.com/JulianPitney/3D-Kinematics"> <h2 class="section-heading">3D Kinematics Box</h2> </a>
+                    <p class="lead">Designed and built a markerless, 360°, hardware synchronized 3D pose estimation system.</p>
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                        <img class="img-responsive" src="img/kinbox.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 		<a  name="singlepellet"></a>
@@ -248,10 +225,7 @@
                     <img class="img-responsive" src="img/reach.gif" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
 	</div>
 
 
@@ -269,10 +243,10 @@
                     <img class="img-responsive" src="img/finish_camera.jpg" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
     </div>
+
+
 
 	<a  name="neuralnetwork"></a>
 	<div class="content-section-b">
@@ -288,38 +262,12 @@
                     <img class="img-responsive" src="img/neuralnet.png" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
 	</div>
 
 
 
-    <a  name="Research Publications"></a>
-	<div class="content-section-b">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <a href="pages/PUBLICATIONS/publications.html"> <h2 class="section-heading">Research Publications</h2> </a>
-                    <p class="lead">A list of research publications for which I am one of the listed authors.</p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                        <img class="img-responsive" src="pages/PUBLICATIONS/images/research_logo_dalle3.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-	</div>
-
-
-
-
-	<a  name="androidmediaplayer"></a>
+	<a  name="Research Publications"></a>
     <div class="content-section-a">
 
         <div class="container">
@@ -327,58 +275,70 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/MEDIA_PLAYER/mediaplayer.html"> <h2 class="section-heading">Android Media Player</h2> </a>
-                    <p class="lead">Designed and implemented a media player app for Android. The app reads music from a local folder on your phone and then hits the LastFM API to fill in missing details like album covers. </p>
+                   <a href="pages/PUBLICATIONS/publications.html"> <h2 class="section-heading">Research Publications</h2> </a>
+                    <p class="lead">Worked on several research projects in the Department of Cellular and Molecular Medicine at UOttawa. Some of these projects are associated with published papers for which I am one of the listed authors.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/mediaplayer.png" alt="">
+                    <img class="img-responsive" src="pages/PUBLICATIONS/images/research_logo_dalle3.png" alt="">
                 </div>
             </div>
-
         </div>
-        <!-- /.container -->
-
     </div>
 
-
-    <a  name="LED Animation Cube"></a>
+    <a  name="Android Media Player"></a>
 	<div class="content-section-b">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/PUBLICATIONS/publications.html"> <h2 class="section-heading">LED Animation Cube</h2> </a>
+                    <a href="pages/MEDIA_PLAYER/mediaplayer.html"> <h2 class="section-heading">Android Media Player</h2> </a>
+                    <p class="lead">Built a media player app for Android. The app uses the LastFM API to fill in details like album art, artist info, etc."></p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                        <img class="img-responsive" src="img/mediaplayer.png" alt="">
+                </div>
+            </div>
+        </div>
+	</div>
+
+
+
+	<a  name="LED Animation Cube"></a>
+    <div class="content-section-a">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                   <a href="pages/LED_CUBE/led_cube.html"> <h2 class="section-heading">LED Animation Cube</h2> </a>
                     <p class="lead">Built an LED animation cube using an open source design.</p>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                        <img class="img-responsive" src="pages/LED_CUBE/images/PXL_20220619_112533734.jpg" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-	</div>
-
-    <div class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <a href="pages/AVL_TREE/avl_tree.html"> <h2 class="section-heading">High Performance Search:<br>AVL Tree</h2> </a>
-                    <p class="lead">Implemented an AVL tree in C++.</p>
-                </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                    <img class="img-responsive" src="pages/LED_CUBE/images/PXL_20220619_112533734.jpg" alt="">
                 </div>
             </div>
-
         </div>
     </div>
+
+
+    <a  name="AVL Tree"></a>
+	<div class="content-section-b">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <a href="pages/AVL_TREE/avl_tree.html"> <h2 class="section-heading">AVL Tree</h2> </a>
+                    <p class="lead">Implemented an AVL tree in C++.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                        <img class="img-responsive" src="img/tree.png" alt="">
+                </div>
+            </div>
+        </div>
+	</div>
 
 
 	<a  name="table"></a>
