--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <p class="lead">Designed and built a PCR machine.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="pages/PCR/images/277829728_702448261084068_6938366353211433746_n.jp" alt="">
+                    <img class="img-responsive" src="pages/PCR/images/board_.png" alt="">
                 </div>
             </div>
         </div>
@@ -125,7 +125,7 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/SEAHORSE_PLATFORM/seahorse.html"> <h2 class="section-heading">Research Data Management Platform</h2> </a>
+                    <a href="pages/SEAHORSE_PLATFORM/seahorse.html"> <h2 class="section-heading">Clinical Trial Data Management Platform</h2> </a>
                     <p class="lead">Hired and led a team to design and build a patient data management system for multiple clinical trials centers.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
