Update some text content

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/HACKHEALTH/hackhealth.html"> <h2 class="section-heading">Hacking Health</h2> </a>
-                    <p class="lead">Organized and led a team to win the Ottawa Hacking Health event at Shopify.</p>
+                    <p class="lead">Organized and led a team to win the Ottawa Hacking Health event at Shopify's Ottawa office..</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/hackhealth.jpg" alt="">
