--- a/index.html
+++ b/index.html
@@ -137,18 +137,18 @@
 
 
 
-    <a  name="surgerybot"></a>
+    <a  name="lightsheet"></a>
 	<div class="content-section-b">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/CAT_ROBOT/cat_robot.html"> <h2 class="section-heading">Mouse Surgery Robot</h2> </a>
-                    <p class="lead">Designed and built a robot for automating craniotomies on research mice.</p>
+                    <a href="pages/LIGHTSHEET/lightsheet.html"> <h2 class="section-heading">Lightsheet Mirscoscope</h2> </a>
+                    <p class="lead">Designed and built a lightsheet microscope system.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="pages/CAT_ROBOT/images/285183684_581245230191818_738763148605609657_n.jpg" alt="">
+                    <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -156,18 +156,18 @@
 
 
 
-    <a  name="lightsheet"></a>
+    <a  name="surgerybot"></a>
 	<div class="content-section-a">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                   <a href="pages/LIGHTSHEET/lightsheet.html"> <h2 class="section-heading"> Lightsheet Microscope</h2> </a>
-                    <p class="lead">Designed and built a lightsheet microscope system.</p>
+                   <a href="pages/CAT_ROBOT/cat_robot.html"> <h2 class="section-heading"> Rodent Surgery Robot</h2> </a>
+                    <p class="lead">Designed and built a robot for automating craniotomies on research rodents.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                        <img class="img-responsive" src="img/lightsheet_title.jpg" alt="">
+                        <img class="img-responsive" src="pages/CAT_ROBOT/images/285183684_581245230191818_738763148605609657_n.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -183,7 +183,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="pages/HACKHEALTH/hackhealth.html"> <h2 class="section-heading">Hacking Health</h2> </a>
-                    <p class="lead">Organized and led a team to win the Ottawa Hacking Health event at Shopify's Ottawa office..</p>
+                    <p class="lead">Organized and led a team to win the Ottawa Hacking Health event at Shopify's Ottawa office.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/hackhealth.jpg" alt="">
