add note explaining fake patient data in pictures

--- a/pages/SEAHORSE_PLATFORM/seahorse.html
+++ b/pages/SEAHORSE_PLATFORM/seahorse.html
@@ -159,7 +159,7 @@
             }
         </style>
         
-        <h1>Pictures:</h1>
+        <h1>Pictures (Note all patient data in these pictures is fake/generated):</h1>
     </div>
     <style>
         .portfolio-item {
