Add PCR machine project

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/SEAHORSE_PLATFORM/seahorse.html"> <h2 class="section-heading">Clinical Trial Data Management Platform</h2> </a>
-                    <p class="lead">Hired and led a team to design and build a patient data management system for multiple clinical trials centers.</p>
+                    <a href="pages/SEAHORSE_PLATFORM/seahorse.html"> <h2 class="section-heading">Clinical Trial Data Platform</h2> </a>
+                    <p class="lead">Hired and led a team to design and build a cloud data platform for multiple clinical trials centers.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                         <img class="img-responsive" src="pages/SEAHORSE_PLATFORM/images/homepage.png" alt="">
@@ -144,7 +144,7 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="pages/LIGHTSHEET/lightsheet.html"> <h2 class="section-heading">Lightsheet Mirscoscope</h2> </a>
+                    <a href="pages/LIGHTSHEET/lightsheet.html"> <h2 class="section-heading">Lightsheet Microscope</h2> </a>
                     <p class="lead">Designed and built a lightsheet microscope system.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
