--- a/pages/PCR/pcr.html
+++ b/pages/PCR/pcr.html
@@ -131,83 +131,16 @@
               }
           </style>
           
-          <h1>Pictures (These are from various stages of development. Pics include early prototypes and working prototype):</h1>
+          <h1>Pictures not available publicly. </h1>
       </div>
       <style>
           .portfolio-item {
               margin-bottom: 30px;
           }
       </style>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/workstation.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/smd_hotplate.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/solder_paste.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/temp_sensor_scale.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/temp_sensor_class.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/solder_inspect.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/scope_i2c.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/power.jpg" alt="">
-    </div>    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/live_graph3.png" alt="">
-    </div>    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/live_graph2.png" alt="">
-    </div>    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/live_graph.png" alt="">
-    </div>    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/ir.jpg" alt="">
-    </div>    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/heat_block.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/gradient.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/gel_results2.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/gel_results.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/fluoro_excitation_led.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/excellent_control.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/dual_tmp117maidrvt_addr1_top.png" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/dual_tmp117maidrvt_addr1_bottom.png" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/dual_tmp117maidrvt_addr0_top.png" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/dual_tmp117maidrvt_addr0_bottom.png" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/box_cad.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/board_assembly_crop.jpg" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/working_proto.jpg" alt="">
-    </div>
+
+
+
         <hr>
 
         <!-- Footer -->
