--- a/pages/PCR/pcr.html
+++ b/pages/PCR/pcr.html
@@ -107,12 +107,12 @@
                   </li>
               </ul>
   
-              <h3>Noteable Components + Tools:</h3>
+              <h3>Noteable Components + Tools (Excluding product IDs due to NDA):</h3>
               <ul>
                   <li>Python</li>
-                  <li>Texas Instruments TMP117MAIDRVT high-accuracy SMD temperature sensors</li>
-                  <li>Laird Thermal PCX7.5-13-F1-4023-TA-RT-W6 molecular diagnostics peltier elements</li>
-                  <li>Texas Instruments OPA380AID op amp</li>
+                  <li>Texas Instruments high-accuracy SMD temperature sensors</li>
+                  <li>Laird Thermal molecular diagnostics peltier elements</li>
+                  <li>Texas Instruments op amp</li>
                   <li>RPi</li>
                   <li>Narrow bandwidth excitation LEDs from ThorLabs.</li>
                   <li>Autodesk Eagle</li>
@@ -131,7 +131,7 @@
               }
           </style>
           
-          <h1>Pictures not available publicly. </h1>
+          <h1>Pictures not publicly available. </h1>
       </div>
       <style>
           .portfolio-item {
