--- a/pages/SEAHORSE_PLATFORM/seahorse.html
+++ b/pages/SEAHORSE_PLATFORM/seahorse.html
@@ -159,34 +159,13 @@
             }
         </style>
         
-        <h1>Pictures (Note all patient data in these pictures is fake/generated):</h1>
+        <h1>Pictures not publicly available.</h1>
     </div>
     <style>
         .portfolio-item {
             margin-bottom: 30px;
         }
     </style>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/homepage.png" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/queryprompt.png" alt="">
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/patientsearch.png" alt="">   
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/patient_profile.png" alt="">   
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/calendar.png" alt="">   
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/admin_homepage.png" alt="">   
-    </div>
-    <div class="col-lg-12 col-lg-12">
-        <img class="img-responsive portfolio-item" src="images/swagger_homepage.png" alt="">   
-    </div>
 
 
         <hr>
