--- a/index.html
+++ b/index.html
@@ -10,32 +10,17 @@
     <meta name="author" content="">
 
     <title> Julian Pitney </title>
-
-    <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
     <link href="css/landing-page.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
+
 
 <body>
 
-    <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
         <div class="container topnav">
-            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -45,27 +30,23 @@
                 </button>
                 <a class="navbar-brand topnav" href="#">Julian Pitney</a>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#hackhealth">Projects</a>
+                        <a href="#PCR Machine">Projects</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
 
 
-    <!-- Header -->
     <a name="about"></a>
     <div class="intro-header">
         <div class="container">
@@ -78,14 +59,7 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a target="_blank" href="https://twitter.com/julianpitney1?lang=en" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                            </li>
-                            <li>
                                 <a target="_blank" href="https://github.com/JulianPitney" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                            </li>
-                            <li>
-                                <a target="_blank" href="https://ca.linkedin.com/in/julian-pitney-a16428108" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -377,18 +351,12 @@
 					<h1> Contact Information</h1>
                     <h2> Julian Pitney</h2>
 					<h3> Phone: (1) 905-431-0992</h3>
-					<h4> Email: JulianPitney@gmail.com</h4>
+					<h4> Email: julianpitney@gmail.com</h4>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a target="_blank" href="https://twitter.com/julianpitney1?lang=en" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
                             <a target="_blank" href="https://github.com/JulianPitney" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a target="_blank" href="https://ca.linkedin.com/in/julian-pitney-a16428108" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
                     </ul>
                 </div>
@@ -415,7 +383,7 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">Projects</a>
+                            <a href="#PCR Machine">Projects</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
